dev/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: myapp-redirect-to-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
