dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80          # The port on which the service is exposed within the cluster
      targetPort: 80    # The port on the container to which traffic will be directed
  type: ClusterIP
