dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: zerossl-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - aviv.doorloop.info
      secretName: myapp-tls
  rules:
    - host: aviv.doorloop.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:
                  number: 80
